# Free-Heive

./: .gitignore  app.py  buildozer.spec  cli.py  fetch.py  memory_test.py  p-note.md  p.py  pyproject.toml  secrect.py  vimeo.py
custom/: __init__.py  item_list.py  topappbar.py
data/: hsc copy.db
data/eduheive/: hsc.db
data/eduheive/hsc/: math.json  subjects.json
kvs/: app.kv
layout_test/: bn_fnt.py  diologue.py  final_screen.py
resource/: biology_course.json  chapters.json  embeded.json  f.json  get-original-course-details.json  oembed.json  p_con.json  p_con.json.bac  response.html  response_raw.html  vimeo.json
script/: data_base.py  vimeo.py
