[tool.poetry]
name = "eduhive"
version = "0.1.0"
description = ""
authors = ["shimanto <s.m.sajjadhossanshimanto.c@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
requests = "^2.28.1"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
