[project]
name = "eduhive"
version = "0.1.0"
description = ""
authors = [{ name = "shimanto", email = "s.m.sajjadhossanshimanto.c@gmail.com" }]
requires-python = "==3.9.5"
dependencies = [
    "requests>=2.28.1,<3",
    "pandas>=1.4.4,<2",
    "SQLAlchemy>=1.4.40,<2",
    "kivymd>=1.0.2,<2",
]

[dependency-groups]
dev = [
    "memory-profiler>=0.60.0,<0.61",
    "ipykernel>=6.15.2,<7",
    "jdc>=0.0.9,<0.0.10",
]

